<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoFondoLayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbliInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/infoFondo"
        android:text="@string/texto_de_prueba"
        android:textAlignment="center"
        android:textColor="@color/infoText"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#E90404"
        android:text="@string/dos"
        android:textColor="#121010" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/uno"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/tres"
            app:cornerRadius="6dp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introduzca_su_nombre"
            android:inputType="text" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/rdbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sevilla" />

        <RadioButton
            android:id="@+id/rdbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/m_laga" />

        <RadioButton
            android:id="@+id/rdbtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_diz" />
    </RadioGroup>

</LinearLayout>